--- a/css/override.css
+++ b/css/override.css
@@ -6,7 +6,7 @@
 }
 
 .right {
-  background-color: rgba(0,0,0,0.10);
+  background-color: rgba(0,0,0,0.65);
   padding-top: 0.5%;
   padding-bottom: 10%;
   padding-left: 5%;
@@ -16,13 +16,31 @@
 .mainPageLanding {
   width: 100%;
   height: 100%;
-  background-image: url("../images/stockExchange.png");
+}
+
+.video-bg-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.video-bg-container video {
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%);
 }
 
 .mainPageOverlay {
   width: 100%;
   height: 100%;
-  background-color: rgba(145,163,251,0.25);
 }
 
 .mainPageTitle {
@@ -35,7 +53,7 @@
   width: 75%;
   font-size: 65pt;
   font-weight: bold;
-  color: white
+  color: white;
 }
 
 .mainPageSubText{
@@ -53,7 +71,7 @@
 
 img {
   width: 300px;
-  background-color: rgba(0,0,0,0.25);
+  background-color: rgba(0,0,0,0.65);
   padding: 2.5%;
 }
 
@@ -62,5 +80,9 @@ small {
 }
 
 html body {
-  background-color: #E8F7FC;
+  background-color: #3BC780;
+  color: white;
+  background-image: url("../images/bars.jpg");
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
