--- a/css/override.css
+++ b/css/override.css
@@ -86,3 +86,7 @@ html body {
   background-position: bottom;
   background-repeat: no-repeat;
 }
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a.active{
+background-color: #000000;
+color: #FFFFFF;
