--- a/css/override.css
+++ b/css/override.css
@@ -88,5 +88,6 @@ html body {
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a.active{
-background-color: #000000;
-color: #FFFFFF;
+  background-color: #000000;
+  color: #FFFFFF;
+}
